@@ -2,11 +2,9 @@ package com.dudko.blazinghot.compat.jei.category.animations;
 
 import java.util.List;
 
-import com.dudko.blazinghot.content.casting.casting_depot.CastingDepotBlock;
 import com.dudko.blazinghot.registry.BlazingBlocks;
 import com.mojang.blaze3d.platform.Lighting;
 import com.mojang.blaze3d.vertex.PoseStack;
-import com.mojang.blaze3d.vertex.Tesselator;
 import com.mojang.math.Axis;
 import com.simibubi.create.AllBlocks;
 import com.simibubi.create.AllPartialModels;
@@ -14,10 +12,9 @@ import com.simibubi.create.compat.jei.category.animations.AnimatedKinetics;
 
 import net.createmod.catnip.animation.AnimationTickHolder;
 import net.createmod.catnip.gui.UIRenderHelper;
-import net.createmod.catnip.platform.ForgeCatnipServices;
+import net.createmod.catnip.platform.NeoForgeCatnipServices;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.renderer.LightTexture;
-import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.util.Mth;
 import net.neoforged.neoforge.fluids.FluidStack;
 
@@ -55,20 +52,16 @@ public class AnimatedCastingSpout extends AnimatedKinetics {
 
 		matrixStack.popPose();
 
-		blockElement(BlazingBlocks.CASTING_DEPOT.getDefaultState().setValue(CastingDepotBlock.POWERED, false))
-				.atLocal(0, 2, 0)
-				.scale(scale)
-				.render(graphics);
+		blockElement(BlazingBlocks.CASTING_DEPOT.getDefaultState()).atLocal(0, 2, 0).scale(scale).render(graphics);
 
 		AnimatedKinetics.DEFAULT_LIGHTING.applyLighting();
-		MultiBufferSource.BufferSource buffer = MultiBufferSource.immediate(Tesselator.getInstance().getBuilder());
 		matrixStack.pushPose();
 		UIRenderHelper.flipForGuiRender(matrixStack);
 		matrixStack.scale(16, 16, 16);
 		float from = 3f / 16f;
 		float to = 17f / 16f;
-		FluidStack fluidStack = fluids.get(0);
-		ForgeCatnipServices.FLUID_RENDERER.renderFluidBox(fluidStack,
+		FluidStack fluidStack = fluids.getFirst();
+		NeoForgeCatnipServices.FLUID_RENDERER.renderFluidBox(fluidStack,
 				from,
 				from,
 				from,
@@ -89,7 +82,7 @@ public class AnimatedCastingSpout extends AnimatedKinetics {
 		matrixStack.translate(-0.5f, 0, -0.5f);
 		from = -width / 2 + 0.5f;
 		to = width / 2 + 0.5f;
-		ForgeCatnipServices.FLUID_RENDERER.renderFluidBox(fluidStack,
+		NeoForgeCatnipServices.FLUID_RENDERER.renderFluidBox(fluidStack,
 				from,
 				0,
 				from,
@@ -101,7 +94,7 @@ public class AnimatedCastingSpout extends AnimatedKinetics {
 				LightTexture.FULL_BRIGHT,
 				false,
 				true);
-		buffer.endBatch();
+		graphics.flush();
 		Lighting.setupFor3DItems();
 
 		matrixStack.popPose();
